Fixed horizontal scroll

--- a/main.css
+++ b/main.css
@@ -515,7 +515,7 @@ a.inactive_join#joinbutton div.largeButton {
 }
 
 a#covid_banner div#covid_div {
-	width: 100vw;
+	width: auto;
 	margin: 30px 0;
 	padding: 20px;
 	background-color: #0033DD;
